Load Factory Prefrences Not Updating Navigation Buttons Theme #68187

Closed
opened 2019-08-03 20:18:35 +02:00 by CandleComet · 3 comments

System Information
Operating system: Linux-4.15.0-55-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: Mesa DRI Intel(R) Haswell Mobile Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.0.2

Blender Version
Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-02 19:29, hash: 3232fc335d
Worked: (optional)

Short description of error
Navigation gizmo buttons don't update back to dark theme after pressing Load Factory Preferences

Exact steps for others to reproduce the error

  • open default blender
  • switch the theme preset to Blender Light
  • click Load Factory Preferences in the user preferences (not the load factory settings button in the file menu)
  • The navigation gizmo buttons are still on the light theme

This bug is similar to #66453, the difference being switching the theme preset vs using load factory preferences

**System Information** Operating system: Linux-4.15.0-55-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: Mesa DRI Intel(R) Haswell Mobile Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.0.2 **Blender Version** Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-02 19:29, hash: `3232fc335d` Worked: (optional) **Short description of error** Navigation gizmo buttons don't update back to dark theme after pressing Load Factory Preferences **Exact steps for others to reproduce the error** * open default blender * switch the theme preset to Blender Light * click Load Factory Preferences in the user preferences (**not** the load factory *settings* button in the file menu) * The navigation gizmo buttons are still on the light theme This bug is similar to #66453, the difference being switching the theme preset vs using load factory preferences
Author

Added subscriber: @CandleComet

Added subscriber: @CandleComet

This issue was referenced by 3c014fe3fb

This issue was referenced by 3c014fe3fb7cab3412de8cb5af194387f0a57af5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-08-12 20:46:09 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68187
No description provided.