Fix T68187: Factory Preferences doesn't update gizmo colors