source/blender/windowmanager/intern/wm_files.c
@@ -1804,7 +1804,9 @@ static void wm_userpref_update_when_changed(bContext *C,
   BPY_execute_string(C, (const char *[]){"addon_utils", NULL}, "addon_utils.reset_all()");
 #endif
 
+  WM_reinit_gizmomap_all(bmain);
   WM_keyconfig_reload(C);
+
   userdef_curr->runtime.is_dirty = is_dirty;
 }
 
